--- a/css/styles.css
+++ b/css/styles.css
@@ -580,6 +580,7 @@ background-color: var(--accent-text-colour);
     margin: 0;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
     cursor: pointer;
+    color: var(--object-colour);
 }
 .form-subscribe {
   display: inline-flex; 
@@ -816,7 +817,12 @@ textarea {
 .form-field {
     display: flex;
     flex-direction: column;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
+    position: relative;
+}
+.form-comment {
+    display: flex;
+    flex-direction: column;
     position: relative;
 }
 
@@ -825,7 +831,7 @@ textarea {
 .action {
     font-weight: 700;
     font-size: 20px;
-    line-height: 1.15;  
+    line-height: 1.14;  
     text-align: center;  
     color: var(--title-text-colour);
     margin-bottom: 12px;
@@ -838,7 +844,7 @@ label {
     position: relative;
     font-weight: 400;
     font-size: 12px;
-    line-height: 1.17;
+    line-height: 1.16;
     letter-spacing: 0.01em;
     color: #757575;
 }
@@ -846,6 +852,8 @@ label {
     display: inline-flex;
     align-items: center;
     margin-top: 20px;
+    margin-left: 12px;
+    margin-bottom: 0;
     
 
 }
